--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
             <div>
                 <label for="input-number">Phone Number</label>
-                <input type="number" id="input-number" required />
+                <input type="text" id="input-number" required />
             </div>
 
             <div>
@@ -56,8 +56,11 @@
             </div>
 
             <div class="btn">
-                <button>Submit</button>
+                <button type="button" onclick="submitData()">Submit</button>
             </div>
         </form>
+        <script src="contact.js"></script>
+        <script src="https://smtpjs.com/v3/smtp.js">
+        </script>
     </body>
 </html>
