--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>Contact Form</title>
-        <link rel="stylesheet" href="style-2.css">
+        <title>Contact Me</title>
+        <link rel="stylesheet" href="css/style-2.css">
     </head>
     <body>
         <nav>
@@ -14,7 +14,7 @@
                         <a class="home" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a class="myproject" href="#">My Project</a>
+                        <a class="myproject" href="myproject.html">My Project</a>
                     </li>
                 </ul>
             </div>
@@ -59,8 +59,6 @@
                 <button type="button" onclick="submitData()">Submit</button>
             </div>
         </form>
-        <script src="contact.js"></script>
-        <script src="https://smtpjs.com/v3/smtp.js">
-        </script>
+        <script src="js/contact.js"></script>
     </body>
 </html>
