--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <html>
     <head>
         <title>Personal Web</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <nav>
             <div class="nav-left">
-              <ul style="background-color: white;">
-                <li style="background-color: white;">
-                  <img src="img/logo.png" alt="logo" style="background-color: white;" />
+              <ul>
+                <li>
+                  <img src="img/logo.png" alt="logo" />
                 </li>
                 <li>
                     <a class="home" href="index.html">Home</a>
                 </li>
                 <li>
-                    <a class="myproject" href="#">My Project</a>
+                    <a class="myproject" href="myproject.html">My Project</a>
                 </li>
               </ul>
             </div>
-            <div class="nav-right" style="background-color: white;">
+            <div class="nav-right">
                 <a href="contact.html">Contact Me</a>
             </div>
         </nav>
@@ -28,15 +28,15 @@
             <div class="left">
                 <h1>Hi! Welcome to my hut</h1>
                 <p>Hallo, nama saya adalah Janni Juniarsa. Saya adalah perempuan yang lahir di Jakarta pada tangal 26 Juni 1996. Saat ini saya berdomisili di Bekasi. Saya beragama Buddha. Saya lulus pada tahun 2014 di SMK jurusan Teknik dan Komputer Jaringan. Saya sangat ingin memulai karir dalam dunia IT. Oleh karena itu, saya mencoba mengikuti bootcamp fullstack programming. </p>
-                <div class="contact" style="background-color: white;">
+                <div class="contact">
                   <button>Contact</button> 
                   <p>download CV <i class="fa-sharp fa-solid fa-file-arrow-down"></i></p>
                 </div>
               <div class="icon">               
-                <i class="fa-brands fa-linkedin" style="background-color: white;"></i>
-                <i class="fa-brands fa-instagram" style="background-color: white;"></i>
-                <i class="fa-brands fa-facebook" style="background-color: white;"></i>
-                <i class="fa-brands fa-twitter" style="background-color: white;"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
               </div>
             </div>
             <div class="right">
