--- a/myproject.html
+++ b/myproject.html
@@ -86,71 +86,20 @@
                   </h3>
                 <h4>durasi : 3 bulan</h4> <br>
                 <p>App that used for dumbways student, it was deployed and can downloaded on playstore. Happy download</p>
-                <div class="icon">               
-                  <i class="fa-brands fa-google-play"></i>
-                  <i class="fa-brands fa-android"></i>
-                  <i class="fa-brands fa-java"></i>
-                </div>
-                <div class="btn-blog">
-                  <button class="btn-blog-edit">Edit</button>
-                  <button class="btn-blog-delete">Delete</button>
-                </div>
+                <div class="icon-tech">
+                  <div id="icon-nodeJs">
+                    <i class="fa-brands fa-node-js"></i>
+                  </div>
+                  <div id="icon-nextJs">
+                    <img src="img/next-js.256x256.png" alt="">
+                  </div>
+                  <div id="icon-reactJs">
+                    <i class="fa-brands fa-react"></i>
+                  </div>
+                  <div id="icon-typeScript">
+                    <img src="img/typescript.png" alt="">
+                  </div>
               </div>
-                <div class="blog-card">
-                  <img src="img/gambar2.jpg">
-                  <h3>Dumbsway Mobile App - 2021</h3>
-                  <h4>durasi : 3 bulan</h4> <br>
-                  <p>App that used for dumbways student, it was deployed and can downloaded on playstore. Happy download</p>
-                  <div class="icon">               
-                    <i class="fa-brands fa-google-play"></i>
-                    <i class="fa-brands fa-android"></i>
-                    <i class="fa-brands fa-java"></i>
-                  </div>
-                  <div class="btn-blog">
-                    <button class="btn-blog-edit">Edit</button>
-                    <button class="btn-blog-delete">Delete</button>
-                  </div>
-                </div>
-                  <div class="blog-card">
-                    <img src="img/gambar3.jpg">
-                    <h3>Dumbsway Mobile App - 2021</h3>
-                    <h4>durasi : 3 bulan</h4> <br>
-                    <p>App that used for dumbways student, it was deployed and can downloaded on playstore. Happy download</p>
-                    <div class="icon">               
-                      <i class="fa-brands fa-google-play"></i>
-                      <i class="fa-brands fa-android"></i>
-                      <i class="fa-brands fa-java"></i>
-                    </div>
-                    <div class="btn-blog">
-                      <button class="btn-blog-edit">Edit</button>
-                      <button class="btn-blog-delete">Delete</button>
-                    </div>
-                  </div>
-                  <div class="blog-card">
-                    <img src="img/gambar1.jpg">
-                    <h3>Dumbsway Mobile App - 2021</h3>
-                    <h4>durasi : 3 bulan</h4> <br>
-                    <p>App that used for dumbways student, it was deployed and can downloaded on playstore. Happy download</p>
-                    <div class="icon">               
-                      <i class="fa-brands fa-google-play"></i>
-                      <i class="fa-brands fa-android"></i>
-                      <i class="fa-brands fa-java"></i>
-                    </div>
-                   <div class="btn-blog">
-                    <button class="btn-blog-edit">Edit</button>
-                    <button class="btn-blog-delete">Delete</button>
-                   </div>
-                  </div>
-                 <div class="blog-card">
-                <img src="img/gambar2.jpg">
-                <h3>Dumbsway Mobile App - 2021</h3>
-                <h4>durasi : 3 bulan</h4> <br>
-                <p>App that used for dumbways student, it was deployed and can downloaded on playstore. Happy download</p>
-                <div class="icon">               
-                  <i class="fa-brands fa-google-play"></i>
-                  <i class="fa-brands fa-android"></i>
-                  <i class="fa-brands fa-java"></i>
-                </div>
                 <div class="btn-blog">
                   <button class="btn-blog-edit">Edit</button>
                   <button class="btn-blog-delete">Delete</button>
