--- a/index.html
+++ b/index.html
@@ -1,50 +1,74 @@
-<html>
-    <head>
-        <title>Personal Web</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
-    <body>
-        <nav>
-            <div class="nav-left">
-              <ul>
-                <li>
-                  <img src="img/logo.png" alt="logo" />
-                </li>
-                <li>
-                    <a class="home" href="index.html">Home</a>
-                </li>
-                <li>
-                    <a class="myproject" href="myproject.html">My Project</a>
-                </li>
-              </ul>
-            </div>
-            <div class="nav-right">
-                <a href="contact.html">Contact Me</a>
-            </div>
-        </nav>
-      <div class="container" >
-        <section>
-            <div class="left">
-                <h1>Hi! Welcome to my hut</h1>
-                <p>Hallo, nama saya adalah Janni Juniarsa. Saya adalah perempuan yang lahir di Jakarta pada tangal 26 Juni 1996. Saat ini saya berdomisili di Bekasi. Saya beragama Buddha. Saya lulus pada tahun 2014 di SMK jurusan Teknik dan Komputer Jaringan. Saya sangat ingin memulai karir dalam dunia IT. Oleh karena itu, saya mencoba mengikuti bootcamp fullstack programming. </p>
-                <div class="contact">
-                  <button>Contact</button> 
-                  <p>download CV <i class="fa-sharp fa-solid fa-file-arrow-down"></i></p>
-                </div>
-              <div class="icon">               
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-              </div>
-            </div>
-            <div class="right">
-                <img src="img/4x6.jpg" alt="Foto Saya">
-                <h1>Janni Juniarsa</h1>
-                <p>Calon Fullstack Developer</p>
-            </div>
-        </section>
-      </div>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Web | Janni Juniarsa</title>
+  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+</head>
+<body>
+  <!-- navigation bar -->
+  <nav>
+    <div class="nav-left">
+      <ul>
+        <li><img src="img/logo.png" alt="logo" /></li>
+        <li class="item-collapse"><a class="home" href="index.html">Home</a></li>
+        <li class="item-collapse"><a class="myproject" href="myproject.html">My Project</a></li>
+      </ul>
+    </div>
+    <div class="nav-right item-collapse">
+        <a class="contact" href="contact.html">Contact Me</a>
+    </div>
+    <div id="barsmenu">
+      <button
+        style="background-color: transparent; border: none; cursor: pointer"
+        onclick="openHamburger()"
+      >
+        <i class="fa-solid fa-bars" style="color: black;"></i>
+      </button>
+    </div>
+  </nav>
+  <div class="hamburger-nav-container" id="hamburger-nav-container">
+    <a href="index.html" class="hamburger-active">Home</a>
+    <a href="myproject.html">My Project</a>
+    <a href="contact.html">Contact Me</a>
+  </div>
+
+<div class="container">
+  <!-- about me -->
+<section id="about">
+  <div class="left">
+    <h1>Hi! Welcome to my personal website</h1>
+    <p>Hallo, nama saya adalah Janni Juniarsa. Saya adalah perempuan yang lahir di Jakarta pada tangal 26 Juni 1996. Saat ini saya berdomisili di Bekasi. Saya beragama Buddha. Saya lulus pada tahun 2014 di SMK jurusan Teknik dan Komputer Jaringan. Saya sangat ingin memulai karir dalam dunia IT. Oleh karena itu, saya mencoba mengikuti bootcamp fullstack programming. </p>
+    <div class="contact">
+      <div class="btn"><a href="contact.html">contact</a>
+       </div>
+      <p>download CV <i class="fa-sharp fa-solid fa-file-arrow-down"></i></p>
+    </div>
+    <div class="icon">               
+      <i class="fa-brands fa-linkedin"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-twitter"></i>
+    </div>
+  </div>  
+</section>
+<!-- card -->
+<section id="id-card">
+  <div class="right">
+    <img src="img/4x6.jpg" alt="Foto Saya">
+    <h1>Janni Juniarsa</h1>
+    <p>Calon Fullstack Developer</p>
+  </div>
+</section>
+</div>    
+<script src="js/navbar.js"></script>
+</body>
 </html>
+
+
+
+
