--- a/myproject.html
+++ b/myproject.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
         <title>My Project Colections</title>
         <link rel="stylesheet" href="css/style-3.css">
+        <link rel="stylesheet" href="css/navbar.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
-    <body>
-        <nav>
-            <div class="nav-left">
-              <ul>
-                <li>
-                  <img src="img/logo.png" alt="logo" />
-                </li>
-                <li>
-                    <a class="home" href="index.html">Home</a>
-                </li>
-                <li>
-                    <a class="myproject" href="myproject.html">My Project</a>
-                </li>
-              </ul>
-            </div>
-            <div class="nav-right">
-                <a href="contact.html">Contact Me</a>
-            </div>
-        </nav>
-        <div class="project">
+  </head>
+  <body>
+      <nav>
+        <div class="nav-left">
+          <ul>
+            <li><img src="img/logo.png" alt="logo" /></li>
+            <li class="item-collapse"><a class="home" href="index.html">Home</a></li>
+            <li class="item-collapse"><a class="myproject" href="myproject.html">My Project</a></li>
+          </ul>
+        </div>
+        <div class="nav-right item-collapse">
+            <a class="contact" href="contact.html">Contact Me</a>
+        </div>
+        <div id="barsmenu">
+          <button
+            style="background-color: transparent; border: none; cursor: pointer"
+            onclick="openHamburger()"
+          >
+            <i class="fa-solid fa-bars" style="color: black;"></i>
+          </button>
+        </div>
+      </nav>
+      <div class="hamburger-nav-container" id="hamburger-nav-container">
+        <a href="index.html">Home</a>
+        <a href="myproject.html" class="hamburger-active">My Project</a>
+        <a href="contact.html">Contact Me</a>
+      </div>
+
+      <div class="project">
             <div class="project-form">
               <div class="form-container">
                 <form id="add-projects" onsubmit="addBlog(event)">
@@ -108,6 +117,7 @@
               </div>
             </div>
           </div>
-      <script src="js/myprojects.js"></script>      
+      <script src="js/myprojects.js"></script> 
+      <script src="js/navbar.js"></script>     
     </body>
 </html>
