--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/style-2.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
   <!-- navigation bar -->
   <nav>
@@ -17,16 +21,14 @@
         <li><img src="img/logo.png" alt="logo" /></li>
         <li class="item-collapse"><a class="home" href="index.html">Home</a></li>
         <li class="item-collapse"><a class="myproject" href="myproject.html">My Project</a></li>
+        <li class="item-collapse"><a class="testimonials" href="testimonials.html">Testimonials</a></li>
       </ul>
     </div>
     <div class="nav-right item-collapse">
-        <a class="contact" href="contact.html">Contact Me</a>
+      <a class="contact" href="contact.html">Contact Me</a>
     </div>
     <div id="barsmenu">
-      <button
-        style="background-color: transparent; border: none; cursor: pointer"
-        onclick="openHamburger()"
-      >
+      <button style="background-color: transparent; border: none; cursor: pointer" onclick="openHamburger()">
         <i class="fa-solid fa-bars" style="color: black;"></i>
       </button>
     </div>
@@ -34,47 +36,48 @@
   <div class="hamburger-nav-container" id="hamburger-nav-container">
     <a href="index.html">Home</a>
     <a href="myproject.html">My Project</a>
+    <a href="testimonials.html">Testimonials</a>
     <a href="contact.html" class="hamburger-active">Contact Me</a>
-  </div> 
+  </div>
   <!-- form validation -->
   <form>
     <h1>Get In Touch</h1>
     <div>
-        <label for="input-name">Name</label>
-                <input type="text" id="input-name" required />
-            </div>
-            
-            <div>
-                <label for="input-email">Email</label>
-                <input type="email" id="input-email" required />
-            </div>
+      <label for="input-name">Name</label>
+      <input type="text" id="input-name" required />
+    </div>
 
-            <div>
-                <label for="input-number">Phone Number</label>
-                <input type="text" id="input-number" required />
-            </div>
+    <div>
+      <label for="input-email">Email</label>
+      <input type="email" id="input-email" required />
+    </div>
 
-            <div>
-                <label for="input-subject">Subject</label>
-                <select id="input-subject" required>
-                    <option value="" hidden>Select</option>
-                    <option>Frontend</option>
-                    <option>Backend</option>
-                    <option>Fullstack</option>
-                </select>
-            </div>
+    <div>
+      <label for="input-number">Phone Number</label>
+      <input type="text" id="input-number" required />
+    </div>
 
-            <div>
-                <label for="input-message">Your Message</label>
-                <textarea required rows="3" cols="10" class="" id="input-message"></textarea>
-            </div>
+    <div>
+      <label for="input-subject">Subject</label>
+      <select id="input-subject" required>
+        <option value="" hidden>Select</option>
+        <option>Frontend</option>
+        <option>Backend</option>
+        <option>Fullstack</option>
+      </select>
+    </div>
 
-            <div class="btn">
-                <button type="button" onclick="submitData()">Submit</button>
-            </div>
-        </form>
-    <script src="js/contact.js"></script>
-    <script src="js/navbar.js"></script>
-  </body>
+    <div>
+      <label for="input-message">Your Message</label>
+      <textarea required rows="3" cols="10" class="" id="input-message"></textarea>
+    </div>
+
+    <div class="btn">
+      <button type="button" onclick="submitData()">Submit</button>
+    </div>
+  </form>
+  <script src="js/contact.js"></script>
+  <script src="js/navbar.js"></script>
+</body>
+
 </html>
-                
