--- a/myproject.html
+++ b/myproject.html
@@ -1,123 +1,130 @@
 <!DOCTYPE html>
+<html lang="en">
+  
 <html>
-  <head>
-        <title>My Project Colections</title>
-        <link rel="stylesheet" href="css/style-3.css">
-        <link rel="stylesheet" href="css/navbar.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
-  <body>
-      <nav>
-        <div class="nav-left">
-          <ul>
-            <li><img src="img/logo.png" alt="logo" /></li>
-            <li class="item-collapse"><a class="home" href="index.html">Home</a></li>
-            <li class="item-collapse"><a class="myproject" href="myproject.html">My Project</a></li>
-          </ul>
-        </div>
-        <div class="nav-right item-collapse">
-            <a class="contact" href="contact.html">Contact Me</a>
-        </div>
-        <div id="barsmenu">
-          <button
-            style="background-color: transparent; border: none; cursor: pointer"
-            onclick="openHamburger()"
-          >
-            <i class="fa-solid fa-bars" style="color: black;"></i>
-          </button>
-        </div>
-      </nav>
-      <div class="hamburger-nav-container" id="hamburger-nav-container">
-        <a href="index.html">Home</a>
-        <a href="myproject.html" class="hamburger-active">My Project</a>
-        <a href="contact.html">Contact Me</a>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Project Colections</title>
+  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/myproject.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-      <div class="project">
-            <div class="project-form">
-              <div class="form-container">
-                <form id="add-projects" onsubmit="addBlog(event)">
-                  <h1>Add My Project</h1>
-                  <div class="title">
-                    <label for="input-project-name">Project Name</label>
-                    <input type="text" id="input-project-name"/>
-                  </div>
-                  <div class="date">
-                    <div>
-                      <label for="startDate">Start Date</label>
-                      <input type="date" id="startDate" min="2023-09-25">
-                    </div>
-                    <div>
-                      <label for="endDate">End Date</label>
-                      <input type="date" id="endDate" min="2023-09-26">
-                    </div>
-                  </div>
-                  <div>
-                    <label for="input-description-project">Description</label>
-                    <textarea id="input-description-project"></textarea>
-                  </div>
-                  <div>
-                  <div id="checkbox" class="checkbox">
-                    <p>Technologies</p> <br>
-                    <label class="checkbox-l">
-                      <input type="checkbox" class="checkbox-i" id="nodeJs" value="nodeJs">Node Js
-                    </label>
-                    <label class="checkbox-l">
-                      <input type="checkbox" class="checkbox-i" id="nextJs" value="nextJs">Next Js
-                    </label> 
-                    <label class="checkbox-l">
-                      <input type="checkbox" class="checkbox-i" id="reactJs" value="reactJs">React Js
-                    </label> 
-                    <label class="checkbox-l">
-                      <input type="checkbox" class="checkbox-i" id="typeScript" value="typeScript">TypeScript
-                    </label>               
-                  </div>
-                  <label>Upload Image</label>
-                  <div class="input-project-image-group">
-                      <label for="input-project-image">
-                        <p>Choose</p>
-                        <img src="img/file.png" />
-                      </label>
-                      <input type="file" id="input-project-image" hidden />
-                  </div>
-                  <div class="btn">
-                    <input type="submit" value="Submit" class="submit">
-                  </div>
-                </form>
-              </div>
+<body>
+  <nav>
+    <div class="nav-left">
+      <ul>
+        <li><img src="img/logo.png" alt="logo" /></li>
+        <li class="item-collapse"><a class="home" href="index.html">Home</a></li>
+        <li class="item-collapse"><a class="myproject" href="myproject.html">My Project</a></li>
+        <li class="item-collapse"><a class="testimonials" href="testimonials.html">Testimonials</a></li>
+      </ul>
+    </div>
+    <div class="nav-right item-collapse">
+      <a class="contact" href="contact.html">Contact Me</a>
+    </div>
+    <div id="barsmenu">
+      <button style="background-color: transparent; border: none; cursor: pointer" onclick="openHamburger()">
+        <i class="fa-solid fa-bars" style="color: black;"></i>
+      </button>
+    </div>
+  </nav>
+  <div class="hamburger-nav-container" id="hamburger-nav-container">
+    <a href="index.html">Home</a>
+    <a href="myproject.html" class="hamburger-active">My Project</a>
+    <a href="testimonials.html">Testimonials</a>
+    <a href="contact.html">Contact Me</a>
+  </div>
+
+  <div class="project">
+    <div class="project-form">
+      <div class="form-container">
+        <form id="add-projects" onsubmit="addBlog(event)">
+          <h1>Add My Project</h1>
+          <div class="title">
+            <label for="input-project-name">Project Name</label>
+            <input type="text" id="input-project-name" />
+          </div>
+          <div class="date">
+            <div>
+              <label for="startDate">Start Date</label>
+              <input type="date" id="startDate" min="2023-09-25">
+            </div>
+            <div>
+              <label for="endDate">End Date</label>
+              <input type="date" id="endDate" min="2023-09-26">
             </div>
           </div>
-          <div class="blog-project-container">
-            <h1>My Project</h1>
-            <div id="contents" class="blog-contents">
-              <div class="blog-card">
-                <img src="img/gambar1.jpg">
-                <h3><a href="blog-project.html">Dumbsway Mobile App - 2021</a>
-                  </h3>
-                <h4>durasi : 3 bulan</h4> <br>
-                <p>App that used for dumbways student, it was deployed and can downloaded on playstore. Happy download</p>
-                <div class="icon-tech">
-                  <div id="icon-nodeJs">
-                    <i class="fa-brands fa-node-js"></i>
-                  </div>
-                  <div id="icon-nextJs">
-                    <img src="img/next-js.256x256.png" alt="">
-                  </div>
-                  <div id="icon-reactJs">
-                    <i class="fa-brands fa-react"></i>
-                  </div>
-                  <div id="icon-typeScript">
-                    <img src="img/typescript.png" alt="">
-                  </div>
-              </div>
-                <div class="btn-blog">
-                  <button class="btn-blog-edit">Edit</button>
-                  <button class="btn-blog-delete">Delete</button>
-                </div>
-              </div>
-            </div>
+          <div>
+            <label for="input-description-project">Description</label>
+            <textarea id="input-description-project"></textarea>
           </div>
-      <script src="js/myprojects.js"></script> 
-      <script src="js/navbar.js"></script>     
-    </body>
+          <div>
+            <div id="checkbox" class="checkbox">
+              <p>Technologies</p> <br>
+              <label class="checkbox-l">
+                <input type="checkbox" class="checkbox-i" id="nodeJs" value="nodeJs">Node Js
+              </label>
+              <label class="checkbox-l">
+                <input type="checkbox" class="checkbox-i" id="nextJs" value="nextJs">Next Js
+              </label>
+              <label class="checkbox-l">
+                <input type="checkbox" class="checkbox-i" id="reactJs" value="reactJs">React Js
+              </label>
+              <label class="checkbox-l">
+                <input type="checkbox" class="checkbox-i" id="typeScript" value="typeScript">TypeScript
+              </label>
+            </div>
+            <label>Upload Image</label>
+            <div class="input-project-image-group">
+              <label for="input-project-image">
+                <p>Choose</p>
+                <img src="img/file.png" />
+              </label>
+              <input type="file" id="input-project-image" hidden />
+            </div>
+            <div class="btn">
+              <input type="submit" value="Submit" class="submit">
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="blog-project-container">
+    <h1>My Project</h1>
+    <div id="contents" class="blog-contents">
+      <div class="blog-card">
+        <img src="img/gambar1.jpg">
+        <h3><a href="blog-project.html">Dumbsway Mobile App - 2021</a>
+        </h3>
+        <h4>durasi : 3 bulan</h4> <br>
+        <p>App that used for dumbways student, it was deployed and can downloaded on playstore. Happy download</p>
+        <div class="icon-tech">
+          <div id="icon-nodeJs">
+            <i class="fa-brands fa-node-js"></i>
+          </div>
+          <div id="icon-nextJs">
+            <img src="img/next-js.256x256.png" alt="">
+          </div>
+          <div id="icon-reactJs">
+            <i class="fa-brands fa-react"></i>
+          </div>
+          <div id="icon-typeScript">
+            <img src="img/typescript.png" alt="">
+          </div>
+        </div>
+        <div class="btn-blog">
+          <button class="btn-blog-edit">Edit</button>
+          <button class="btn-blog-delete">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="js/myprojects.js"></script>
+  <script src="js/navbar.js"></script>
+</body>
 </html>
